tests/out/error/ffi/backend_warning.in.bt
#JS.'console.log(1)'

#C."int i = 1;"
